# django_auth

./: .gitignore  README.MD  README.md  plan.md
backend/: .coveragerc  .env.example  environment.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
backend/api/: __init__.py  apps.py  cache_keys.py  caching.py  constants.py  decorators.py  exceptions.py  models.py  monitoring_urls.py  permissions.py  request_user.py  security_logging.py  throttling.py  urls.py  validation.py
backend/api/adapters/: __init__.py  oracle.py
backend/api/middleware/: __init__.py  authentication.py  authorization.py  content_security_policy.py  enforcement.py  request_id.py
backend/api/serializers/: __init__.py  equipment_serializer.py  health_serializer.py  invoice_serializer.py  user_serializer.py
backend/api/services/: __init__.py  oracle_equipment_service.py  oracle_invoice_service.py
backend/api/static/api/: swagger-ui-overrides.css
backend/api/views/: __init__.py  base.py  docs.py  equipment.py  health.py  invoice.py  user.py
backend/config/: __init__.py  asgi.py  logging.py  pytest_settings.py  settings.py  urls.py  wsgi.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_apps.py  test_cache_key_enforcement.py  test_cache_keys.py  test_caching.py  test_constants.py  test_exceptions.py  test_permissions.py  test_security_logging.py  test_throttling.py  test_validation.py  test_view_base_class.py  test_view_decorator_order.py
backend/tests/config/: test_asgi.py  test_logging.py  test_settings.py  test_wsgi.py
docs/: plan.md  (+3 more)
(+19 files in other folders)
