[project]
name = "django-auth"
version = "0.1.0"
description = "Django authentication and authorization backend"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django==5.2.13",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.4.14",
    "django-cors-headers==4.9.0",
    "ldap3==2.9.1",
    "python-dotenv==1.2.2",
    "mssql-django==1.6",
    "uvicorn==0.46.0",
    "pywin32==311; platform_system == 'Windows'",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "mypy==1.20.0",
    "django-stubs==6.0.2",
    "djangorestframework-stubs==3.16.9",
    "ruff==0.15.9",
]

[tool.uv]
default-groups = ["dev"]
